---
source: src/linter.rs
expression: output.finish().to_string()
---
  #: E722
  try:
      pass
| except:
|     pass
| #: E722
|> Do not use bare `except`
  try:
      pass
  except Exception:
      pass
| except:
|     pass
| #: E722
|> Do not use bare `except`
  try:
      pass
| except:
|     pass
| #: Okay
|> Do not use bare `except`
  fake_code = """"
  try:
      do_something()
  except:
      pass
  """
  try:
      pass
  except Exception:
      pass
  #: Okay
  from . import compute_type
  
  if compute_type(foo) == 5:
      pass

